Fix alert title on platforms where scrollbar is visible (#59)
* Hide scrollbar unless title overflows

* Detach util fn from class and rename

* Change overflow handling default

* Reuse text node ref

Note: `selection.text()` is "replacing any existing child elements" which would detach the ref
https://github.com/d3/d3-selection#selection_text
Therefore setting new `textContent` value directly on the node

* Cache full length title width

* Fix typo

* Remove obsolete comment

* Fix title logic blind spot

* Add declaration for the new var in the constructor

* Replace single-use var with direct use of dot notation

--- a/visualizer/style.css
+++ b/visualizer/style.css
@@ -217,7 +217,8 @@ html.light-theme #front-matter, html.light-theme #graph, html.light-theme #recom
   flex: 1 1 0px;
   padding: 0 8px;
   white-space: nowrap;
-  overflow-x: scroll; /* JS will shorten the text if the element is scrollable */
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 #alert .summary .toggle {
